--- a/src/1-base/fonts.scss
+++ b/src/1-base/fonts.scss
@@ -1,17 +1,11 @@
 /* ---- Fonts ---- */
 
+/* Import from Google Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova&display=swap');
+
+/* Font Families */
 :root {
-    /* 
-    If the font isn't installed in the system, 
-    it will go down the list until it finds on that is.
-     */
-
-    --default-font: "Inter", sans-serif; /* Note and Settings Text */
+    --default-font: "Inter", sans-serif; /* Note and settings text */
     --font-monospace: "Source Code Pro", monospace; /* Code block text */
-
-    /* 
-    var(--variableName); is a variable,
-    so you can use what you set over and over without having
-    to rewrite it multiple times.
-     */
+    --display-heading-font: "Ibarra Real Nova", serif; /* Biggest headings */
 }
