--- a/src/3-notes/headings.scss
+++ b/src/3-notes/headings.scss
@@ -8,6 +8,7 @@ h1,
 .cm-header-1 {
     font-family: var(--display-heading-font);
     font-weight: 400 !important; /* important to override .cm-header */
+    font-size: 2.67em !important /* important needed for h1 */;
 }
 
 h2,
