--- a/src/1-base/fonts.scss
+++ b/src/1-base/fonts.scss
@@ -1,8 +1,9 @@
 /* ---- Fonts ---- */
 
 /* Embed Google Fonts */
+
 /* Encoded using https://amio.github.io/embedded-google-fonts */
-@use 'ibarra-real-nova.scss';
+@use "ibarra-real-nova.scss";
 
 /* Font Families */
 :root {
