--- a/src/1-base/variables.scss
+++ b/src/1-base/variables.scss
@@ -1,4 +1,5 @@
-/* ---- Variables ---- */
+/* Variables
+========================================================= */
 
 .theme-dark {
     --background-modifier-cover: rgb(0 0 0 / 80%); /* Obsidian Title Bar Bg */
