--- a/src/2-app/buttons.scss
+++ b/src/2-app/buttons.scss
@@ -1,10 +1,11 @@
-/* ---- Buttons ---- */
+/* Buttons
+========================================================= */
 
-/* Default Buttons */
+/* Default buttons */
 button {}
 
-/* Settings Buttons */
+/* Settings buttons */
 button.mod-cta {}
 
-/* Warning Buttons */
+/* Warning buttons */
 button.mod-warning{}
