--- a/src/2-app/ribbons-panels-status-bar.scss
+++ b/src/2-app/ribbons-panels-status-bar.scss
@@ -1,13 +1,14 @@
-/* ---- Ribons, Panels and Status Bar ---- */
+/* Ribbons, panels and status bar
+========================================================= */
 
-/*  Ribbons (The Thin Vertical Bars to the Far Left and Right)  */
+/*  Ribbons (thin vertical bars on the far sides) */
 .workspace-ribbon {}
 
-/* Side Panels */
+/* Side panels */
 .workspace-tabs {}
 
-/* Side Panel: Icons */
+/* Side panel icons */
 .workspace-tab-header-inner-icon {}
 
-/* Status Bar */
+/* Status bar */
 .status-bar {}
