--- a/src/2-app/settings.scss
+++ b/src/2-app/settings.scss
@@ -1,22 +1,23 @@
-/* ---- Settings ---- */
+/* Settings
+========================================================= */
 
-/* All Popup Windows: Settings */
+/* All popup windows: settings */
 .modal {}
 
-/* Command Palette & Quick Switcher */
+/* Command palette & quick switcher */
 .prompt {}
 
-/* Notifications in the Top Right */
+/* Notifications in the top right */
 .notice {}
 
-/* Context Menu  */
+/* Context menu  */
 .menu {}
 
-/* Setting Dropdown */
+/* Setting dropdown */
 .dropdown {}
 
-/* Community Themes Browser */
+/* Community themes browser */
 .community-theme {}
 
-/* Community Plugins Browser */
+/* Community plugins browser */
 .community-plugin {}
