--- a/src/2-app/startup-screen.scss
+++ b/src/2-app/startup-screen.scss
@@ -1,13 +1,14 @@
-/* ---- Startup Progress Bar Screen ---- */
+/* Startup screen
+========================================================= */
 
-/* Startup Progress Bar Window */
+/* Startup progress bar window */
 .progress-bar {}
 
-/* Startup Text */
+/* Startup text */
 .progress-bar .progress-bar-message {}
 
-/* Startup Progress Bar Background */
+/* Startup progress bar background */
 .progress-bar-indicator .progress-bar-line {}
 
-/* Startup Progress Bar Moving Line */
+/* Startup progress bar moving line */
 .progress-bar-indicator .progress-bar-subline {}
