--- a/src/3-notes/blockquotes.scss
+++ b/src/3-notes/blockquotes.scss
@@ -1,2 +1,4 @@
-/* ---- Blockquotes ---- */
+/* Blockquotes
+========================================================= */
+
 .markdown-preview-view blockquote {}
