--- a/src/3-notes/footnotes.scss
+++ b/src/3-notes/footnotes.scss
@@ -1,13 +1,14 @@
-/* ---- Footnotes ---- */
+/* Footnotes
+========================================================= */
 
-/* Footnote Link in Note */
-.markdown-preview-view a.footnote-link {} /* Reading View */
+/* Footnote link in note */
+.markdown-preview-view a.footnote-link {} /* Reading view */
 
-/* Reference Number in Text */
-.cm-s-obsidian span.cm-footref {} /* Editing View */
+/* Reference number in text */
+.cm-s-obsidian span.cm-footref {} /* Editing view */
 
-/* Footnotes Section at the Bottom of the Note */
-.markdown-preview-view .footnotes {} /* Reading View */
+/* Footnotes section at the bottom of the note */
+.markdown-preview-view .footnotes {} /* Reading view */
 
-/* Footnote Back Ref (Arrow) at the Bottom of the Note */
-.footnote-backref {} /* Reading View */
+/* Footnote back ref (arrow) at the bottom of the note */
+.footnote-backref {} /* Reading view */
