--- a/src/3-notes/frontmatter.scss
+++ b/src/3-notes/frontmatter.scss
@@ -1,7 +1,8 @@
-/* ---- Frontmatter/Metadata/YAML ---- */
+/* Frontmatter/metadata/YAML
+========================================================= */
 
-.frontmatter-container {} /* Reading Mode */
-.CodeMirror-line .cm-s-obsidian .cm-hmd-frontmatter {} /* Source Mode */
+.frontmatter-container {} /* Reading mode */
+.CodeMirror-line .cm-s-obsidian .cm-hmd-frontmatter {} /* Source mode */
 
-/* Frontmatter Tag */
-.frontmatter-container .frontmatter-alias {} /* Reading Mode */
+/* Frontmatter tag */
+.frontmatter-container .frontmatter-alias {} /* Reading mode */
