--- a/src/3-notes/headings.scss
+++ b/src/3-notes/headings.scss
@@ -1,4 +1,5 @@
-/* ---- Headings ---- */
+/* Headings
+========================================================= */
 
 .HyperMD-header-1 {
     font-size: 2.67em;
