--- a/src/3-notes/horizontal-rule.scss
+++ b/src/3-notes/horizontal-rule.scss
@@ -1,8 +1,9 @@
-/* ---- Horizontal Rule ---- */
+/* Horizontal rule
+========================================================= */
 
-hr {} /* Reading Mode */
-.hr.cm-line {} /* Source Mode */
-.HyperMD-hr-bg {} /* Source Mode */
+hr {} /* Reading mode */
+.hr.cm-line {} /* Source mode */
+.HyperMD-hr-bg {} /* Source mode */
 
-/* Horizontal Rule Text */
-.cm-s-obsidian pre.HyperMD-hr {} /* Source Mode */
+/* Horizontal rule text */
+.cm-s-obsidian pre.HyperMD-hr {} /* Source mode */
