--- a/src/3-notes/links.scss
+++ b/src/3-notes/links.scss
@@ -1,16 +1,17 @@
-/* ---- Links ---- */
+/* Links
+========================================================= */
 
-.cm-s-obsidian span.cm-hmd-internal-link {} /* Source Mode */
+.cm-s-obsidian span.cm-hmd-internal-link {} /* Source mode */
 
-/* Wiki Links */
-a.internal-link {} /* Reading Mode */
+/* Wiki links */
+a.internal-link {} /* Reading mode */
 
-/* Markdown Links */
-a.external-link {} /* Reading Mode */
+/* Markdown links */
+a.external-link {} /* Reading mode */
 
-/* Link to No Page */
-a.internal-link.is-unresolved {} /* Reading Mode */
+/* Link to no page */
+a.internal-link.is-unresolved {} /* Reading mode */
 
 /* Tags */
-a.tag {} /* Reading Mode */
-.cm-s-obsidian span.cm-hashtag {} /* Source Mode */
+a.tag {} /* Reading mode */
+.cm-s-obsidian span.cm-hashtag {} /* Source mode */
