--- a/src/3-notes/notes.scss
+++ b/src/3-notes/notes.scss
@@ -1,13 +1,14 @@
-/* ---- Notes ---- */
+/* Notes
+========================================================= */
 
-/* Source Mode */
+/* Source mode */
 .cm-s-obsidian:not(.is-live-preview) {}
 
-/* Source Mode */
+/* Source mode */
 .markdown-source-view {}
 
-/* Live Preview Mode */
+/* Live preview mode */
 .cm-s-obsidian.is-live-preview {}
 
-/* Reading Mode */
+/* Reading mode */
 .markdown-preview-view {}
