--- a/src/3-notes/tables.scss
+++ b/src/3-notes/tables.scss
@@ -1,13 +1,14 @@
-/* ---- Tables ---- */
+/* Tables
+========================================================= */
 
-table {} /* Reading Mode */
+table {} /* Reading mode */
 
-/* Table Headers */
-table th {} /* Reading Mode */
+/* Table headers */
+table th {} /* Reading mode */
 
-/* Table Column */
-table td {} /* Reading Mode */
+/* Table column */
+table td {} /* Reading mode */
 
-/* Table Row */
-table tr {} /* Reading Mode */
-.cm-s-obsidian .HyperMD-table-row {} /* Source Mode */
+/* Table row */
+table tr {} /* Reading mode */
+.cm-s-obsidian .HyperMD-table-row {} /* Source mode */
