--- a/src/2-app/cursor.scss
+++ b/src/2-app/cursor.scss
@@ -1,12 +1,13 @@
-/* ---- Cursor ---- */
+/* Cursor
+========================================================= */
 
 .cm-cursorLayer .cm-cursor {
     /*  border-left: ...  */
 }
 
-/*  Animation of the Blinking  */
+/*  Animation of blinking  */
 .cm-cursorLayer {
-    /*  Deactivate Built-in Animation from CodeMirror  */
+    /*  Deactivate built-in animation from CodeMirror  */
     animation-name: none !important; /* important needed */
 }
 
