--- a/src/obsidian.scss
+++ b/src/obsidian.scss
@@ -1,9 +1,9 @@
-// Fonts, Variables and CSS Reset
+// Fonts, variables and CSS reset
 @use "1-base/fonts.scss";
 @use "1-base/reset.scss";
 @use "1-base/variables.scss";
 
-// Application Styling
+// Application styling
 @use "2-app/buttons.scss";
 @use "2-app/cursor.scss";
 @use "2-app/file-explorer.scss";
@@ -14,7 +14,7 @@
 @use "2-app/title-bars.scss";
 @use "2-app/tooltips.scss";
 
-// Notes Styling
+// Notes styling
 @use "3-notes/blockquotes.scss";
 @use "3-notes/code.scss";
 @use "3-notes/embeds.scss";
@@ -28,6 +28,6 @@
 @use "3-notes/notes.scss";
 @use "3-notes/tables.scss";
 
-// Core Plugins
+// Core plugins
 
-// Community Plugins
+// Community plugins
