Refactor: move comment styling into their own file

--- a/src/obsidian.scss
+++ b/src/obsidian.scss
@@ -17,6 +17,7 @@
 // Notes styling
 @use "3-notes/blockquotes.scss";
 @use "3-notes/code.scss";
+@use "3-notes/comments.scss";
 @use "3-notes/embeds.scss";
 @use "3-notes/emphasis.scss";
 @use "3-notes/footnotes.scss";
