Fix: comment out variables from theme template

--- a/src/1-base/variables.scss
+++ b/src/1-base/variables.scss
@@ -2,48 +2,48 @@
 ========================================================= */
 
 .theme-dark {
-    --background-modifier-cover: rgb(0 0 0 / 80%); /* Obsidian Title Bar Bg */
-    --background-primary: #202020; /* Note background */
-    --background-primary-alt: #1a1a1a; /* Note Title background active */
-    --background-secondary: #161616; /* Sidebar background */
-    --background-secondary-alt: #000; /* Sidebar Title background */
-    --background-modifier-border: #333; /* Border outline of quotes, tables, line breaks */
-    --text-normal: #dcddde; /* Text body of note */
-    --text-muted: ; /* Text darker for sidebar, toggles, inactive, tags, etc */
-    --text-accent: #7f6df2; /* Links */
-    --text-accent-hover: #8875ff; /* Links hover */
-    --text-faint: #666; /* Link brackets color & Gutter Numbers */
-    --text-highlight-bg: rgb(255 255 0 / 40%); /* Search Matches */
-    --text-highlight-bg-active: rgb(255 128 0 / 40%); /* Active Search Match (Preview Mode) */
-    --text-selection: rgb(23 48 77 / 99%); /* Text Selections */
-    --interactive-normal: #2a2a2a; /* Button Color */
-    --interactive-hover: #303030; /* Button Hovered Color */
-    --interactive-accent: #483699; /* Workspace Note Title Underline */
-    --interactive-accent-hover: #4d3ca6; /* Menu Button Hover */
-    --scrollbar-bg: rgb(255 255 255 / 5%); /* Scrollbar Gutter Background */
-    --scrollbar-thumb-bg: rgb(255 255 255 / 10%); /* Scrollbar Color */
-    --scrollbar-active-thumb-bg: rgb(255 255 255 / 20%); /* Scrollbar Dragged Color */
+    // --background-modifier-cover: rgb(0 0 0 / 80%); /* Obsidian Title Bar Bg */
+    // --background-primary: #202020; /* Note background */
+    // --background-primary-alt: #1a1a1a; /* Note Title background active */
+    // --background-secondary: #161616; /* Sidebar background */
+    // --background-secondary-alt: #000; /* Sidebar Title background */
+    // --background-modifier-border: #333; /* Border outline of quotes, tables, line breaks */
+    // --text-normal: #dcddde; /* Text body of note */
+    // --text-muted: ; /* Text darker for sidebar, toggles, inactive, tags, etc */
+    // --text-accent: #7f6df2; /* Links */
+    // --text-accent-hover: #8875ff; /* Links hover */
+    // --text-faint: #666; /* Link brackets color & Gutter Numbers */
+    // --text-highlight-bg: rgb(255 255 0 / 40%); /* Search Matches */
+    // --text-highlight-bg-active: rgb(255 128 0 / 40%); /* Active Search Match (Preview Mode) */
+    // --text-selection: rgb(23 48 77 / 99%); /* Text Selections */
+    // --interactive-normal: #2a2a2a; /* Button Color */
+    // --interactive-hover: #303030; /* Button Hovered Color */
+    // --interactive-accent: #483699; /* Workspace Note Title Underline */
+    // --interactive-accent-hover: #4d3ca6; /* Menu Button Hover */
+    // --scrollbar-bg: rgb(255 255 255 / 5%); /* Scrollbar Gutter Background */
+    // --scrollbar-thumb-bg: rgb(255 255 255 / 10%); /* Scrollbar Color */
+    // --scrollbar-active-thumb-bg: rgb(255 255 255 / 20%); /* Scrollbar Dragged Color */
 }
 
 .theme-light {
-    --background-primary: #fff; /* Note background */
-    --background-primary-alt: #f5f6f8; /* Note Title background active */
-    --background-secondary: #f2f3f5; /* Sidebar background */
-    --background-secondary-alt: #e3e5e8; /* Sidebar Title background */
-    --background-modifier-border: #ddd; /* Border outline of quotes, tables, line breaks */
-    --text-normal: #2e3338; /* Text body of note */
-    --text-muted: #888; /* Text darker for sidebar, toggles, inactive, tags, etc */
-    --text-accent: #705dcf; /* Links */
-    --text-accent-hover: #7a6ae6; /* Links hover */
-    --text-faint: #999; /* Link brackets color */
-    --text-highlight-bg: rgb(255 255 0 / 40%); /* Search Matches */
-    --text-highlight-bg-active: rgb(255 128 0 / 40%); /* Active Search Match (Preview Mode) */
-    --text-selection: rgb(23 48 77 / 99%); /* Text Selections */
-    --interactive-normal: #f2f3f5; /* Button background Color */
-    --interactive-hover: #e9e9e9; /* Button Hovered Color */
-    --interactive-accent: #7b6cd9; /* Workspace Note Title Underline */
-    --interactive-accent-hover: #8273e6; /* Menu Button Hover */
-    --scrollbar-bg: rgb(0 0 0 / 5%); /* Scrollbar Gutter Background */
-    --scrollbar-thumb-bg: rgb(0 0 0 / 10%); /* Scrollbar Color */
-    --scrollbar-active-thumb-bg: rgb(0 0 0 / 20%); /* Scrollbar Dragged Color */
+    // --background-primary: #fff; /* Note background */
+    // --background-primary-alt: #f5f6f8; /* Note Title background active */
+    // --background-secondary: #f2f3f5; /* Sidebar background */
+    // --background-secondary-alt: #e3e5e8; /* Sidebar Title background */
+    // --background-modifier-border: #ddd; /* Border outline of quotes, tables, line breaks */
+    // --text-normal: #2e3338; /* Text body of note */
+    // --text-muted: #888; /* Text darker for sidebar, toggles, inactive, tags, etc */
+    // --text-accent: #705dcf; /* Links */
+    // --text-accent-hover: #7a6ae6; /* Links hover */
+    // --text-faint: #999; /* Link brackets color */
+    // --text-highlight-bg: rgb(255 255 0 / 40%); /* Search Matches */
+    // --text-highlight-bg-active: rgb(255 128 0 / 40%); /* Active Search Match (Preview Mode) */
+    // --text-selection: rgb(23 48 77 / 99%); /* Text Selections */
+    // --interactive-normal: #f2f3f5; /* Button background Color */
+    // --interactive-hover: #e9e9e9; /* Button Hovered Color */
+    // --interactive-accent: #7b6cd9; /* Workspace Note Title Underline */
+    // --interactive-accent-hover: #8273e6; /* Menu Button Hover */
+    // --scrollbar-bg: rgb(0 0 0 / 5%); /* Scrollbar Gutter Background */
+    // --scrollbar-thumb-bg: rgb(0 0 0 / 10%); /* Scrollbar Color */
+    // --scrollbar-active-thumb-bg: rgb(0 0 0 / 20%); /* Scrollbar Dragged Color */
 }
