Feat: pretty <hr>s

--- a/src/1-base/variables.scss
+++ b/src/1-base/variables.scss
@@ -27,7 +27,7 @@
 
 .theme-light {
     /* Border outline of quotes, tables, line breaks */
-    --background-modifier-border: #000;
+    // --background-modifier-border: #000;
 
     // --background-primary: #fff; /* Note background */
     // --background-primary-alt: #f5f6f8; /* Note Title background active */
