--- a/obsidian.css
+++ b/obsidian.css
@@ -1,4 +1,7 @@
 @charset "UTF-8";
+/* External resources
+========================================================= */
+/* Encoded using https://amio.github.io/embedded-google-fonts */
 /* latin-ext */
 @font-face {
   font-weight: 400;
@@ -17,13 +20,8 @@
   font-display: swap;
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-/* Fonts
-========================================================= */
-/* Embed Google Fonts
---------------------------------------------------------- */
-/* Encoded using https://amio.github.io/embedded-google-fonts */
 /* Font families
---------------------------------------------------------- */
+========================================================= */
 :root {
   /* Note and settings text */
   --default-font: "Inter", sans-serif;
