Style: reorganise font comments

--- a/src/1-resources/ibarra-real-nova.scss
+++ b/src/1-resources/ibarra-real-nova.scss
@@ -1,4 +1,8 @@
+/* Ibarra Real Nova
+========================================================= */
+
 /* Encoded using https://amio.github.io/embedded-google-fonts */
+
 /* latin-ext */
 @font-face {
     font-weight: 400;
